# harmony-speech-engine

./: .dockerignore  .env-amd  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  config-voicefixer-example.yml  config.gpu.yml  config.nvidia.yml  config.yml  docker-compose.amd.yml  docker-compose.nvidia.yml  docker-compose.yml  generate_openapi_go.sh  opencode.json  pyproject.toml  requirements-chatterbox.txt  requirements-common.txt  requirements-cpu.txt  requirements-cuda.txt  requirements-rocm.txt  requirements.txt  setup.py
.clinerules/: cline-workspace-rules.md  workspace-rules.md
.current_work/: frontend-hse-tabs-completion.md  vllm-omni-analysis.md  vllm-omni-integration-plan.md
.current_work/chatterbox-audio-enhancements/: 1-1-AudioUtilitiesModule.md  2-1-ProtocolAdditions.md  3-1-ServingLayerChunking.md  4-1-SpeedFactorNormalization.md  5-1-UnitTests.md  5-2-E2ETests-Chatterbox.md  5-3-E2ETests-Other-models.md  5-4-DocumentationUpdate.md  6-1-AudioUtilitiesPhaseB.md  7-1-ProtocolPhaseB.md  8-1-ServingLayerPhaseB.md  9-1-UnitTests-PhaseB.md  9-2-E2ETests-Chatterbox-PhaseB.md  9-3-E2ETests-Other-models-PhaseB.md  research.md  summary.md
.current_work/kittentts-integration/: 1-KittenTTSModelModule.md  2-ModelRegistryRegistration.md  3-LoaderIntegration.md  4-InputPreparationHandler.md  5-ModelRunnerExecutionHandler.md  6-ConfigurationExamples.md  7-DependenciesUpdate.md  8-DocumentationUpdate.md  summary.md
.current_work/vllm-omni-integration/: 1-ModelConfigExtension.md  2-1-VllmOmniExecutor-CoreClass.md  2-2-VllmOmniExecutor-MemoryAndStageConfig.md  2-3-VllmOmniExecutor-PromptBuilding.md  2-4-VllmOmniExecutor-ExecuteAndExtract.md  3-ModelRegistry.md  4-EngineIntegration.md  5-Requirements.md  6-ConfigExamples.md  7-Documentation.md  summary.md
.github/workflows/: docker-release-engine.yml  docker-release-ui.yml  docker-release.yml  test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.roo/rules/: implementation-plans.md  workspace-rules.md
auth/: apikeys.py
docker/: Dockerfile  entrypoint.sh
docker/amd/: Dockerfile
docker/amd-wsl/: Dockerfile  entrypoint.sh
docker/cpu/: Dockerfile
docker/nvidia/: Dockerfile
docs/: api.md  audio-restoration.md  docker.md  models.md  routing.md  testing.md
docs/api/: generate_openapi_go.sh  generate_openapi_js.sh  openapi.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  style.css
harmonyspeech/: __init__.py  commit_id.py  version.py
harmonyspeech/common/: config.py  inputs.py  logger.py  metrics.py  outputs.py  request.py  sequence.py  utils.py
harmonyspeech/config_utils/: config.py
harmonyspeech/endpoints/: cli.py
harmonyspeech/engine/: arg_tools.py  args_tools.py  async_harmonyspeech.py  harmonyspeech_engine.py  metrics.py
harmonyspeech/executor/: cpu_executor.py  executor_base.py  gpu_executor.py  neuron_executor.py  ray_gpu_executor.py
harmonyspeech/modeling/: __init__.py  hf_downloader.py  loader.py  utils.py
harmonyspeech/processing/: scheduler.py
harmonyspeech/task_handler/: cpu_model_runner.py  cpu_worker.py  gpu_model_runner.py  gpu_worker.py  inputs.py  (+6 more)
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
models/: dummy.txt
openapi/: generate_openapi_go.sh  generate_openapi_js.sh  openapi.json
tests/: conftest.py
(+199 files in other folders)
