[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "torch>=2.7.1",
    "packaging"
]
build-backend = "setuptools.build_meta"

[project]
name = "harmony-speech-engine"
version = "0.1.1-rc2"
description = "A high performance inference engine for Open Source Speech AI"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "AGPL-3.0"}
authors = [{name = "Harmony.AI Solutions"}]
keywords = ["AI", "Speech", "TTS", "STT", "Voice", "Inference", "PyTorch"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://project-harmony.ai/"
Documentation = "https://github.com/harmony-ai-solutions/harmony-speech-engine/docs"
GitHub = "https://github.com/harmony-ai-solutions/harmony-speech-engine"
Huggingface = "https://huggingface.co/harmony-ai"

[project.scripts]
harmonyspeech = "harmonyspeech.endpoints.cli:main"

[tool.setuptools]
packages = {find = {exclude = ["kernels", "examples", "tests*"]}}

[tool.setuptools.package-data]
harmonyspeech = [
    "endpoints/kobold/klite.embd",
    "quantization/hadamard.safetensors",
    "py.typed",
    "modeling/layers/fused_moe/configs/*.json"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--strict-markers",
    "-ra",
    "--cov=harmonyspeech",
    "--cov-omit=harmonyspeech/modeling/models/*",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "unit: marks tests as unit tests (fast, fully mocked)",
    "integration: marks tests as integration tests (component interaction, partially mocked)",
    "e2e: marks tests as end-to-end tests (real models, slow, CPU-only)",
    "slow: marks tests that take > 30 seconds to run",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "models/", ".planning/"]
